--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 header {
     height: 100vh;
-    background-image: url(./assires/bg-image.jpg);
+    background-image: url(bg-image.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -482,4 +482,5 @@ display: block;
     display: flex;
     text-align: center;
     justify-content: center;
+
 }
