--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 header {
     height: 100vh;
-    background-image: url(bg-image.jpg);
+    background-image: url(./assires/bg-image.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -484,3 +484,4 @@ display: block;
     justify-content: center;
 
 }
+
